[package]
name = "solara_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

egui = "0.26"
egui-winit = "0.26"
winit = "0.29"
eframe = "0.26"