[package]
name = "solara_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Update eframe to match egui version
eframe = "0.26.0"
egui = "0.26.0"
egui-winit = "0.26.0"
winit = "0.29"